@@ -216,6 +216,9 @@ namespace Astroid {
     default_config.put ("thread_view.code_prettify.code_tag", "```");
     default_config.put ("thread_view.code_prettify.enable_for_patches", true);
 
+    /* gravatar */
+    default_config.put ("thread_view.gravatar.enable", true);
+
     /* crypto */
     default_config.put ("crypto.gpg.path", "gpg2");
 
